[package]
name = "bidding-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
async-std = { version = "1.12.0", features = [ "attributes" ] }
protobuf = "3.2.0"
chrono = "0.4.23"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "sqlite" ] }
clap = { version = "4.1.4", features = ["derive"] }

